@@ -569,6 +569,7 @@
 	- renamed clear_directory_nosnap() to clear_directory_2()
 	- renamed clear_callback_nosnap() to clear_callback_2()
 	- do not remove the -log and valgrind output with "store_output" set to 2
+	- added support for running only the first entry of the softwarelist when "use_softwarelist" is set to 2
 	
 	create_report
 	- added a summary at the end when "dokuwiki_format" is set
